--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            My First Web Application
+            Lab Assignment
         </title>
         <style>
             * {
