--- a/index.html
+++ b/index.html
@@ -35,12 +35,8 @@
                 grid-template-columns: 1fr 6fr 2fr;
             }
             .align-center{
-                justify-self: center;
-                align-self: center;
-                padding: 15px;
+                margin: 15px;
                 border: 1px dashed #CCC;
-                height: 80%;
-                width: 100%;
             }
 
         </style>
